// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogHost Tests Show MRS DB Object Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="mrsSchemaDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <span
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Object
      </label>
      <button
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <span
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <label
            class="msg label sectionTitle"
            data-tooltip="expand"
          >
            Enter Configuration Values for the New MySQL REST Object
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Service Path
          </label>
          <div
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              /mrs
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path of the REST Service this REST Object belongs to
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Schema Path
          </label>
          <div
            class="msg container fixedScrollbar dropdown valueEditor"
            id="schema"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              /mrs_notes
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path of the REST Schema this DB Object belongs to
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Object Path
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path to access the object, has to start with /
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Database Object Name
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The name of the database object
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            CRUD Operations
          </label>
          <div
            class="msg container fixedScrollbar tagInput dropdown multiSelect"
            id="crudOperations"
            style="flex-direction: row; flex-wrap: wrap;"
            tabindex="0"
          >
            <label
              class="msg label tag"
              data-tooltip="expand"
              draggable="true"
            >
              READ
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The CURD operations allowed for this database object
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Flags
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Enabled
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="requiresAuth"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Requires Authentication
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column; --tabItem-border-width: 0px; --content-separator-width: 0px;"
          >
            <div
              class="msg container fixedScrollbar selector horizontal tabArea stretched"
              style="flex-direction: row;"
            >
              <div
                class="msg container fixedScrollbar selectorItem stepDown"
                id="selectorItemstepDown"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
              <div
                class="msg container fixedScrollbar selectorItem selected normal"
                id="page0"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Basic
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem normal"
                id="page1"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Parameters
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem normal"
                id="page2"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Advanced
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem normal"
                id="page3"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Options
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem stepUp"
                id="selectorItemstepUp"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
            </div>
            <div
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Result Format
                  </label>
                  <div
                    class="msg container fixedScrollbar dropdown valueEditor"
                    id="crudOperationFormat"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      FEED
                    </label>
                  </div>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Items per Page
                  </label>
                  <div
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      class="msg input valueEditor"
                      id="itemsPerPage"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Comments
                  </label>
                  <div
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      class="msg input valueEditor"
                      id="comments"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Row Ownership
                  </label>
                  <label
                    class="msg checkbox checked valueEditor"
                    id="rowUserOwnershipEnforced"
                    tabindex="0"
                  >
                    <span
                      class="checkMark"
                    />
                    Enforce Row User Ownership
                  </label>
                  <label
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    Enables the MRS row ownership management
                  </label>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Row Ownership Field
                  </label>
                  <div
                    class="msg container fixedScrollbar dropdown valueEditor"
                    id="rowUserOwnershipColumn"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      created_by
                    </label>
                  </div>
                  <label
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    Field that holds the user ID that should be managed by MRS
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Schema Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="mrsSchemaDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <span
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <button
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <span
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Service Path
          </label>
          <div
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              localhost
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path of the REST Service this REST Schema belongs to
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            Comments to describe this REST Schema.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Schema Path
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The request path to access the schema, has to start with /
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Schema Name
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The name of the corresponding database schema.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Items per Page
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="itemsPerPage"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Flags
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Enabled
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="requiresAuth"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Requires Authentication
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Options
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <textarea
              class="msg input valueEditor"
              id="options"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            Additional options in JSON format
          </label>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Service Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="mrsServiceDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <span
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <button
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <span
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Service Path
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="servicePath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The URL context root of this service.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            Comments to describe this MRS Service.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Host Name
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="hostName"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            If specified, only requests for this host will served.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Supported Protocols
          </label>
          <div
            class="msg container fixedScrollbar tagInput dropdown multiSelect"
            id="protocols"
            style="flex-direction: row; flex-wrap: wrap;"
            tabindex="0"
          />
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The supported protocols.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service Flags
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Enabled
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="makeDefault"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Default
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column; --tabItem-border-width: 0px; --content-separator-width: 0px;"
          >
            <div
              class="msg container fixedScrollbar selector horizontal tabArea stretched"
              style="flex-direction: row;"
            >
              <div
                class="msg container fixedScrollbar selectorItem stepDown"
                id="selectorItemstepDown"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
              <div
                class="msg container fixedScrollbar selectorItem selected normal"
                id="page0"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Options
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem normal"
                id="page1"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Authentication
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem normal"
                id="page2"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Authentication Apps
                </label>
              </div>
              <div
                class="msg container fixedScrollbar selectorItem stepUp"
                id="selectorItemstepUp"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
            </div>
            <div
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Options in JSON Format:
                  </label>
                  <div
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <textarea
                      class="msg input valueEditor"
                      id="options"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show Prompt Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="shellPromptDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <span
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Feedback Requested
      </label>
      <button
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <span
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Lorem ipsum dolor sit amet
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Standard Rendering (snapshot) 1`] = `
<DialogHost>
  <PasswordDialog
    key="passwordDialog"
  />
  <ValueEditDialog
    key="valueEditDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        {
          "begin": [],
          "end": [
            <Button
              caption="OK"
              disabled={false}
              id="ok"
              onClick={[Function]}
            />,
            <Button
              caption="Cancel"
              id="cancel"
              onClick={[Function]}
            />,
          ],
        }
      }
      caption={
        <p>
          <Icon
            disabled={false}
            src={388}
          />
          <Label />
        </p>
      }
      className="msg valueEditDialog"
      container={
        <body
          theme="dark"
        />
      }
      content={
        <Grid
          columnGap={16}
          columns={8}
          rowGap={16}
        />
      }
      id=""
      onClose={[Function]}
    >
      <Portal
        container={
          <body
            theme="dark"
          />
        }
        id=""
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
    <Menu
      onItemClick={[Function]}
      orientation="column"
      placement="right-start"
    >
      <Popup
        className="msg menu"
        onClose={[Function]}
        onKeyDown={[Function]}
        onOpen={[Function]}
        orientation="column"
        pinned={false}
        placement="right-start"
        showArrow={false}
      >
        <Portal
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
        />
      </Popup>
    </Menu>
  </ValueEditDialog>
  <ConfirmDialog
    key="confirmDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        {
          "end": [],
        }
      }
      caption={
        <p>
          <Icon
            disabled={false}
            src={275}
          />
          <Label>
            Confirm
          </Label>
        </p>
      }
      className="msg confirmDialog"
      container={
        <body
          theme="dark"
        />
      }
      content={
        <Container
          orientation="column"
        >
          
          <Container
            className="description"
            orientation="column"
          />
        </Container>
      }
      onClose={[Function]}
    >
      <Portal
        container={
          <body
            theme="dark"
          />
        }
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
  </ConfirmDialog>
  <MrsServiceDialog
    key="mrsServiceDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsServiceDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsServiceDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsServiceDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsServiceDialog>
  <MrsSchemaDialog
    key="mrsSchemaDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsSchemaDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsSchemaDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsSchemaDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsSchemaDialog>
  <MrsDbObjectDialog
    key="mrsDbObjectDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsSchemaDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsSchemaDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsSchemaDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsDbObjectDialog>
  <MrsContentSetDialog
    key="mrsContentSetDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsContentSetDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsContentSetDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsContentSetDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsContentSetDialog>
  <MrsAuthenticationAppDialog
    key="mrsAuthenticationAppDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsAuthenticationAppDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsAuthenticationAppDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsAuthenticationAppDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsAuthenticationAppDialog>
  <MrsUserDialog
    key="mrsUserDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsUserDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsUserDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsUserDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsUserDialog>
  <MdsHWClusterDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mdsHWClusterDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mdsHWClusterDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mdsHWClusterDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MdsHWClusterDialog>
  <MdsHWLoadDataDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mdsHWLoadDataDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mdsHWLoadDataDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mdsHWLoadDataDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MdsHWLoadDataDialog>
</DialogHost>
`;
